--- a/geetolsdk/build.gradle
+++ b/geetolsdk/build.gradle
@@ -36,7 +36,10 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:4.2.2'
     compile 'com.squareup.okio:okio:2.4.1'
     compile 'com.google.code.gson:gson:2.8.6'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile('com.github.bumptech.glide:glide:4.5.0') {
+        exclude group: "com.android.support"
+    }
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
     compile 'jp.wasabeef:glide-transformations:2.0.2'
     // 阿里云oss
     compile 'com.aliyun.dpa:oss-android-sdk:+'
